VRVU-255: Added backend for searching participants by mother name
